--- a/docs/docs/api/client/typescript/api/types/action-result.mdx
+++ b/docs/docs/api/client/typescript/api/types/action-result.mdx
@@ -7,9 +7,8 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### error [`ErrorResult`]( error-result) <s generated />
+#### error [`ErrorResult`](error-result) <s generated />
 
-- Action이 실패할 경우에 에러정보를 담고 있습니다.
+- Contains error information in case of action failure.
 
-<hr class="solid" />  <s generated />
-
+<hr class="solid" /> <s generated />
