--- a/docs/docs/api/client/typescript/api/types/actions-click-options.mdx
+++ b/docs/docs/api/client/typescript/api/types/actions-click-options.mdx
@@ -7,9 +7,8 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### durationMs [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### durationMs [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-- `click`시 down과 up 사이의 `miliseconds` 을 지정합니다. 기본값은 60입니다.
+- When 'click', specify 'milisseconds' between down and up. The default is 60.
 
-<hr class="solid" />  <s generated />
-
+<hr class="solid" /> <s generated />
