--- a/docs/docs/api/client/typescript/api/types/actions-scroll-options.mdx
+++ b/docs/docs/api/client/typescript/api/types/actions-scroll-options.mdx
@@ -7,9 +7,8 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### durationMs [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### durationMs [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-- `scroll`을 요청하고 완료될때까지 기다리는 miliseconds을 설정합니다. 기본값은 300ms 입니다.
+- Set the milliseconds to request 'scroll' and wait for completion. The default is 300 ms.
 
-<hr class="solid" />  <s generated />
-
+<hr class="solid" /> <s generated />
