--- a/docs/docs/api/client/typescript/api/types/find-object-options.mdx
+++ b/docs/docs/api/client/typescript/api/types/find-object-options.mdx
@@ -7,9 +7,8 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### delayMs [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### delayMs [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-- `findObject` 완료이후 기다리는 miliseconds 을 설정합니다. 기본값은 60ms 입니다.
+- Set the milliseconds to wait after completion of 'findObject'. The default is 60 ms.
 
-<hr class="solid" />  <s generated />
-
+<hr class="solid" /> <s generated />
