--- a/docs/docs/api/client/typescript/api/types/gamium-client-options.mdx
+++ b/docs/docs/api/client/typescript/api/types/gamium-client-options.mdx
@@ -7,9 +7,8 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### port [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### port [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-- 현재 PC에서 연결할 Gamium Engine가 Listening 중인 port 번호 입니다.
+- The port number on which the Gamium Engine to connect from the PC is currently listening.
 
-<hr class="solid" />  <s generated />
-
+<hr class="solid" /> <s generated />
