--- a/docs/docs/api/client/typescript/api/types/locator.mdx
+++ b/docs/docs/api/client/typescript/api/types/locator.mdx
@@ -5,7 +5,6 @@ toc_max_heading_level: 4
 
 # Locator <s generated />
 
-Object 를 찾을때 사용하는 수 있는 방법의 집합입니다.
+A set of methods that can be used to locate an object.
 
-#### [`By`]( ../classes/by) <s generated />
-
+#### [`By`](../classes/by) <s generated />
