--- a/docs/docs/api/client/typescript/api/types/move-player-options.mdx
+++ b/docs/docs/api/client/typescript/api/types/move-player-options.mdx
@@ -7,21 +7,20 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### by [`MovePlayerBy`]( ../enums/move-player-by) <s generated />
+#### by [`MovePlayerBy`](../enums/move-player-by) <s generated />
 
-- Player를 움직이는데 사용할 방법을 나타냅니다.
+- Indicates the method to use to move Player.
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
-#### epsilon [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### epsilon [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-- 목적지까지의 거리를 비교시 도착을 판단할 거리입니다. Player와 목적지까지의 거리가 이 값보다 작으면 도착으로 판단합니다.
+- The distance to determine the distance from the destination to the destination.If the distance from the Player and destination is smaller than this value.
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
-#### checkHeight [`boolean`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean) <s generated />
+#### checkHeight [`boolean`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean) <s generated />
 
-- 목적지까지의 거리를 비교시 높이체크를 할지 여부를 나타냅니다크
+- Indicates whether a height check is performed when comparing the distance to the destinationbig
 
-<hr class="solid" />  <s generated />
-
+<hr class="solid" /> <s generated />
