--- a/docs/docs/api/client/typescript/api/types/query-profile-result.mdx
+++ b/docs/docs/api/client/typescript/api/types/query-profile-result.mdx
@@ -7,9 +7,8 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### fps [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### fps [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-- 초당 프레임 수
+- Frames per second
 
-<hr class="solid" />  <s generated />
-
+<hr class="solid" /> <s generated />
