--- a/docs/docs/api/client/typescript/api/types/query-screen-result.mdx
+++ b/docs/docs/api/client/typescript/api/types/query-screen-result.mdx
@@ -7,15 +7,14 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### width [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### width [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-- 화면 가로길이
+- Screen Horizontal Length
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
-#### height [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### height [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-- 화면 세로길이
+- Screen Vertical Length
 
-<hr class="solid" />  <s generated />
-
+<hr class="solid" /> <s generated />
