--- a/docs/docs/api/client/typescript/api/types/send-key-options.mdx
+++ b/docs/docs/api/client/typescript/api/types/send-key-options.mdx
@@ -7,9 +7,8 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### duratiomMs [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### duratiomMs [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-- 키입력시 down과 up 사이의 `miliseconds` 을 지정합니다. 기본값은 100입니다.
+- When entering the key, specify 'milisseconds' between down and up. The default is 100.
 
-<hr class="solid" />  <s generated />
-
+<hr class="solid" /> <s generated />
