--- a/docs/docs/api/client/typescript/api/types/vector2.mdx
+++ b/docs/docs/api/client/typescript/api/types/vector2.mdx
@@ -5,15 +5,14 @@ toc_max_heading_level: 4
 
 # Vector2 <s generated />
 
-2D vector 와 point들을 나타내는 클래스입니다.
+Class that represents 2D vectors and points.
 
 ## Properties <s generated />
 
-#### x [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### x [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
-#### y [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### y [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-<hr class="solid" />  <s generated />
-
+<hr class="solid" /> <s generated />
