--- a/docs/docs/api/client/typescript/api/types/wait-options.mdx
+++ b/docs/docs/api/client/typescript/api/types/wait-options.mdx
@@ -7,27 +7,26 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### timeoutMs [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### timeoutMs [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-- 성공할때까지 시도하는 최대 시간 miliseconds 입니다. 기본값은 5000 입니다.
+- Maximum time milliseconds to try until successful. The default is 5000.
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
-#### message [`string`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
+#### message [`string`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
 
-- 에러 발생시 같이 나타낼 메시지 입니다.
+- This is a message that will be displayed together in the event of an error.
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
-#### intervalMs [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### intervalMs [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-- 재시도를 시도하는 간격 miliseconds 입니다. 기본값은 100 입니다.
+- Interval milliseconds for retry attempts. The default is 100.
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
-#### ignoreError [`boolean`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean) <s generated />
+#### ignoreError [`boolean`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean) <s generated />
 
-- 에러 발생시 무시할지 여부 입니다. 기본값은 true 입니다.
+- Whether to ignore errors. The default is true.
 
-<hr class="solid" />  <s generated />
-
+<hr class="solid" /> <s generated />
