--- a/docs/docs/api/client/typescript/api/types/actions-drag-options.mdx
+++ b/docs/docs/api/client/typescript/api/types/actions-drag-options.mdx
@@ -7,15 +7,14 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### durationMs [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### durationMs [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-- 전체 drag duration miliseconds을 지정합니다. 기본값은 300입니다.
+- Specifies the overall drag duration miliseconds. The default is 300.
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
-#### intervalMs [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### intervalMs [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-- drag시 여러번 mouse move를 잘게 나누어서 보냅니다. 이때 각 mouse move 이벤트의 interval miliseconds을 지정합니다. 기본값은 60입니다.
+- When dragging, I send the mouse move several times by dividing it into small pieces. Specifies the interval milliseconds for each mouse move event. The default is 60.
 
-<hr class="solid" />  <s generated />
-
+<hr class="solid" /> <s generated />
