--- a/docs/docs/api/client/typescript/api/types/error-result.mdx
+++ b/docs/docs/api/client/typescript/api/types/error-result.mdx
@@ -7,15 +7,14 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### code [`ErrorCode`]( ../enums/error-code) <s generated />
+#### code [`ErrorCode`](../enums/error-code) <s generated />
 
-- 에러를 구분하는 코드입니다
+- Code that distinguishes errors
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
-#### reason [`string`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
+#### reason [`string`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
 
-- 에러의 원인을 설명하는 문자열입니다.
+- String describing the cause of the error.
 
-<hr class="solid" />  <s generated />
-
+<hr class="solid" /> <s generated />
