--- a/docs/docs/api/client/typescript/api/types/execute-rpc-options.mdx
+++ b/docs/docs/api/client/typescript/api/types/execute-rpc-options.mdx
@@ -7,9 +7,8 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### castNumberToFloat [`boolean`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean) <s generated />
+#### castNumberToFloat [`boolean`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean) <s generated />
 
-- `executeRpc`함수를 호출할때 parameter들 중 number 타입의 값들을 float로 변환하여 전달할지 여부를 결정합니다. 기본값은 `true` 입니다.
+- When calling the 'executeRpc' function, it determines whether the values of type number of parameters are converted to float and passed. The default value is 'true'.
 
-<hr class="solid" />  <s generated />
-
+<hr class="solid" /> <s generated />
