--- a/docs/docs/api/client/typescript/api/types/query-object-interactable-options.mdx
+++ b/docs/docs/api/client/typescript/api/types/query-object-interactable-options.mdx
@@ -7,15 +7,14 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### checkMoving [`boolean`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean) <s generated />
+#### checkMoving [`boolean`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean) <s generated />
 
-- Object가 움직이는지 여부를 체크합니다. 기본값은 true입니다.
+- Check if the object is moving. The default is true.
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
-#### checkRaycast [`boolean`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean) <s generated />
+#### checkRaycast [`boolean`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean) <s generated />
 
-- Object가 Raycast에 의해 선택되는지 여부를 체크합니다. 기본값은 true입니다.
+- Check whether the object is selected by Raycast. The default is true.
 
-<hr class="solid" />  <s generated />
-
+<hr class="solid" /> <s generated />
