--- a/docs/docs/api/client/typescript/api/types/rpc-locator.mdx
+++ b/docs/docs/api/client/typescript/api/types/rpc-locator.mdx
@@ -5,7 +5,6 @@ toc_max_heading_level: 4
 
 # RpcLocator <s generated />
 
-Remote Procudure Call을 실행하고자 할때 사용하는 방법의 집합입니다.
+The set of methods used to run the Remote Procedure Call.
 
-#### [`RpcBy`]( ../classes/rpc-by) <s generated />
-
+#### [`RpcBy`](../classes/rpc-by) <s generated />
