--- a/docs/docs/api/client/typescript/api/types/vector3.mdx
+++ b/docs/docs/api/client/typescript/api/types/vector3.mdx
@@ -5,19 +5,18 @@ toc_max_heading_level: 4
 
 # Vector3 <s generated />
 
-3D vector 와 point들을 나타내는 클래스입니다.
+Class representing 3D vectors and points.
 
 ## Properties <s generated />
 
-#### x [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### x [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
-#### y [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### y [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
-#### z [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### z [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-<hr class="solid" />  <s generated />
-
+<hr class="solid" /> <s generated />
