--- a/docs/docs/api/client/typescript/api/types/vector4.mdx
+++ b/docs/docs/api/client/typescript/api/types/vector4.mdx
@@ -5,23 +5,22 @@ toc_max_heading_level: 4
 
 # Vector4 <s generated />
 
-4D vector 와 point들을 나타내는 클래스입니다.
+Class representing 4D vectors and points.
 
 ## Properties <s generated />
 
-#### x [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### x [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
-#### y [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### y [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
-#### z [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### z [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
-#### w [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
+#### w [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) <s generated />
 
-<hr class="solid" />  <s generated />
-
+<hr class="solid" /> <s generated />
