📝 API Reference english

--- a/docs/docs/api/client/typescript/api/enums/error-code.mdx
+++ b/docs/docs/api/client/typescript/api/enums/error-code.mdx
@@ -6,7 +6,7 @@ toc_max_heading_level: 4
 
 # ErrorCode <s generated />
 
-Gamium Engine와 Gamium Client 간의 통신에서 발생하는 에러 코드를 정의합니다.
+Defines the error code that occurs in communication between the Gamium Engine and the Gamium Client.
 
 #### None <s generated />
 
@@ -73,4 +73,3 @@ Gamium Engine와 Gamium Client 간의 통신에서 발생하는 에러 코드를
 #### ExecuteRpcMultiplePropertyFound <s generated />
 
 #### ExecuteRpcNotSupportedType <s generated />
-
