--- a/docs/docs/api/client/typescript/api/enums/execute-rpc-by.mdx
+++ b/docs/docs/api/client/typescript/api/enums/execute-rpc-by.mdx
@@ -6,16 +6,16 @@ toc_max_heading_level: 4
 
 # ExecuteRpcBy <s generated />
 
-Remote Procudure Call을 실행하고자 할때 선택하는 방법들입니다.
+These are the methods you choose to run Remote Procedure Call.
 
 #### Method <s generated />
 
-- 특정 함수를 호출합니다.
+- Invokes a specific function.
 
 #### Field <s generated />
 
-- 특정 필드의 값을 얻어옵니다.
+- Gets the value of a specific field.
 
 #### Property <s generated />
 
-- 특정 프로퍼티의 값을 얻어옵니다.
+- Gets the value of a specific property.
