--- a/docs/docs/api/client/typescript/api/enums/input-key-by.mdx
+++ b/docs/docs/api/client/typescript/api/enums/input-key-by.mdx
@@ -6,12 +6,12 @@ toc_max_heading_level: 4
 
 # InputKeyBy <s generated />
 
-키입력을 실행하고자 할때 선택하는 방법들입니다.
+These are the methods you choose to run keystrokes.
 
 #### UNITY_KEYCODE <s generated />
 
-- [Unity Input Manager](https://docs.unity3d.com/Manual/class-InputManager.html)이 적용된 프로젝트에서 키보드 입력을 하기위해 사용되는 타입입니다.
+- The type that is used for keyboard input in projects with [Unity Input Manager](https://docs.unity3d.com/Manual/class-InputManager.html) .
 
 #### UNITY_KEYBOARD <s generated />
 
-- [Unity Input System](https://docs.unity3d.com/Packages/com.unity.inputsystem@latest)이 적용된 프로젝트에서 키보드 입력을 하기위해 사용되는 타입입니다.
+- The type used by projects with [Unity Input System](https://docs.unity3d.com/Packages/com.unity.inputsystem@latest) to enter the keyboard.
