--- a/docs/docs/api/client/typescript/api/enums/move-player-by.mdx
+++ b/docs/docs/api/client/typescript/api/enums/move-player-by.mdx
@@ -6,12 +6,12 @@ toc_max_heading_level: 4
 
 # MovePlayerBy <s generated />
 
-플레이어를 움직이고자 할때 선택하는 방법들입니다.
+These are the ways you choose to move the player.
 
 #### KeyPress <s generated />
 
-- KeyInput을 시뮬레이션하며 플레이어를 움직입니다. 직선거리로 이동합니다.
+- Simulate KeyInput and move the player. Move to a straight distance.
 
 #### Navigation <s generated />
 
-- 엔진에 내장된 Navigation 기능을 사용하여 플레이어를 움직입니다.
+- Use the navigation functionality built into the engine to move the player.
