--- a/docs/docs/api/client/typescript/api/enums/object-locator-by.mdx
+++ b/docs/docs/api/client/typescript/api/enums/object-locator-by.mdx
@@ -6,12 +6,12 @@ toc_max_heading_level: 4
 
 # ObjectLocatorBy <s generated />
 
-Object찾을 때 사용하는 방법입니다.
+This method is used to find objects.
 
 #### Path <s generated />
 
-- Object Path를 사용하여 Object를 찾습니다.
+- Use the Object Path to locate the object.
 
 #### Tag <s generated />
 
-- Object Tag를 사용하여 Object를 찾습니다.
+- Use the Object Tag to locate the object.
