--- a/docs/docs/api/client/typescript/api/enums/object-type.mdx
+++ b/docs/docs/api/client/typescript/api/enums/object-type.mdx
@@ -6,16 +6,16 @@ toc_max_heading_level: 4
 
 # ObjectType <s generated />
 
-조회한 Object의 타입을 나타냅니다.
+Indicates the type of object that was queried.
 
 #### Unknown <s generated />
 
-- 특정한 타입으로 분류되지 않은 Object입니다.
+- Objects not classified as specific types.
 
 #### UI <s generated />
 
-- UI Object입니다.
+- UI Object.
 
 #### Camera <s generated />
 
-- 카메라 Object입니다.
+- Camera Object.
