--- a/docs/docs/api/client/typescript/api/enums/unity-key-code.mdx
+++ b/docs/docs/api/client/typescript/api/enums/unity-key-code.mdx
@@ -6,8 +6,8 @@ toc_max_heading_level: 4
 
 # UnityKeyCode <s generated />
 
-[Unity Input Manager](https://docs.unity3d.com/Manual/class-InputManager.html)이 적용된 프로젝트에서 키보드 입력을 하기위해 사용되는 타입입니다.
-[KeyCode](https://docs.unity3d.com/kr/2021.3/ScriptReference/KeyCode.html) 를 반영합니다.
+The type that is used for keyboard input in projects with [Unity Input Manager](https://docs.unity3d.com/Manual/class-InputManager.html) .
+Created by referring to [KeyCode] (https://docs.unity3d.com/kr/2021.3/ScriptReference/KeyCode.html) .
 
 #### Backspace <s generated />
 
@@ -662,4 +662,3 @@ toc_max_heading_level: 4
 #### Joystick8Button18 <s generated />
 
 #### Joystick8Button19 <s generated />
-
