--- a/docs/docs/api/client/typescript/api/enums/unity-keyboard.mdx
+++ b/docs/docs/api/client/typescript/api/enums/unity-keyboard.mdx
@@ -6,8 +6,8 @@ toc_max_heading_level: 4
 
 # UnityKeyboard <s generated />
 
-[Unity Input System](https://docs.unity3d.com/Packages/com.unity.inputsystem@latest)이 적용된 프로젝트에서 키보드 입력을 하기위해 사용되는 타입입니다.
-[Enum Key](https://docs.unity3d.com/Packages/com.unity.inputsystem@1.5/api/UnityEngine.InputSystem.Key.html) 를 반영합니다.
+The type used by projects with [Unity Input System]cs.unity3d.com/Packages/com.unity.inputsystem@latest) to enter the keyboard.
+[Enum Key](https://docs.unity3d.com/Packages/com.unity.inputsystem@1.5/api/UnityEngine.InputSystem.Key.html) 를 참고하여 생성되었습니다.
 
 #### Space <s generated />
 
@@ -242,4 +242,3 @@ toc_max_heading_level: 4
 #### OEM4 <s generated />
 
 #### OEM5 <s generated />
-
