--- a/docs/docs/api/client/typescript/api/classes/by.mdx
+++ b/docs/docs/api/client/typescript/api/classes/by.mdx
@@ -6,7 +6,7 @@ toc_max_heading_level: 4
 
 # By <s generated />
 
-Class used by [Identifying GamiumObject](../../objectpath).
+Class used by [Identifying GamiumObject](gamium/client/typescript/object-path).
 
 <hr class="solid" /> <s generated />
 
