--- a/docs/docs/api/client/typescript/api/classes/player.mdx
+++ b/docs/docs/api/client/typescript/api/classes/player.mdx
@@ -64,7 +64,7 @@ await player.move(By.path('Camera object path'), By.path('Dest Object path'), {
 
 - cameraLocator [`Locator`](../types/locator) <s generated />
 
-- dest [`Vector3`](vector3) | [`Locator`](../types/locator) <s generated />
+- dest [`Vector3`](../types/vector3) | [`Locator`](../types/locator) <s generated />
 
 - options [`Partial`](https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`MovePlayerOptions`](../types/move-player-options)> <s generated />
 
