--- a/docs/docs/api/client/typescript/api/classes/ui-element.mdx
+++ b/docs/docs/api/client/typescript/api/classes/ui-element.mdx
@@ -62,7 +62,7 @@ await handle.drag(
 
 ##### Arguments <s generated />
 
-- to [`UIElement`](ui-element) | [`Vector2`](vector2) <s generated />
+- to [`UIElement`](ui-element) | [`Vector2`](../types/vector2) <s generated />
 
 - options [`Partial`](https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`ActionsDragOptions`](../types/actions-drag-options)> <s generated />
 
@@ -161,7 +161,7 @@ await dragger.scroll({ x: 0, y: -0.5 }, { durationMs: 2000 });
 
 ##### Arguments <s generated />
 
-- delta [`Vector2`](vector2) <s generated />
+- delta [`Vector2`](../types/vector2) <s generated />
 
 - options [`Partial`](https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`ActionsScrollOptions`](../types/actions-scroll-options)> <s generated />
 
