--- a/docs/docs/gamium/client/typescript/object-path.mdx
+++ b/docs/docs/gamium/client/typescript/object-path.mdx
@@ -22,7 +22,7 @@ Below is an example of using 'Object path' in 'Gamium Client'.
 const cameraObj = await gamium.findObject(By.path('/Main Camera[1]'));
 ```
 
-In the example above, we are looking for a camera using the 'Object path' called '/Main Camera [1]'. The reason for using the function [`By.path()`](api/classes/by.mdx) is to inform you that you are searching through 'Object path' among the object search methods.
+In the example above, we are looking for a camera using the 'Object path' called '/Main Camera [1]'. The reason for using the function [`By.path()`](api/client/typescript/classes/by.mdx) is to inform you that you are searching through 'Object path' among the object search methods.
 
 <br />
 
