--- a/docs/docs/gamium/client/typescript/rpc.mdx
+++ b/docs/docs/gamium/client/typescript/rpc.mdx
@@ -11,7 +11,7 @@ Before performing this action, check the supporting function through the guide f
 
 <br />
 
-You can use [RpcBy](api/classes/rpc-by) by specifying the desired calling method.
+You can use [RpcBy](api/client/typescript/classes/rpc-by) by specifying the desired calling method.
 
 You can use it as below.
 
