--- a/docs/docs/gamium/client/typescript/ui.mdx
+++ b/docs/docs/gamium/client/typescript/ui.mdx
@@ -4,8 +4,8 @@ title: Control UI
 toc_max_heading_level: 4
 ---
 
-You can obtain an object called [`UI`](api/classes/ui) through the [`Game Driver`](api/classes/gamium-client).
-[`UI`](api/classes/ui) provides an interface for easy UI manipulation.
+You can obtain an object called [`UI`](api/client/typescript/classes/ui) through the [`Game Driver`](api/client/typescript/classes/gamium-client).
+[`UI`](api/client/typescript/classes/ui) provides an interface for easy UI manipulation.
 
 You can use it as below.
 
@@ -18,7 +18,7 @@ await ui.click(By.path('Object path'));
 
 ### Auto wait
 
-If you are using the class [`UI`](api/classes/ui), automatically do the [`wait`](api/classes/ui-element) until you find it.
+If you are using the class [`UI`](api/client/typescript/classes/ui), automatically do the [`wait`](api/client/typescript/classes/ui-element) until you find it.
 The above Usage works the same as below.
 
 ```ts
